fix : Add to cart button ui breaking on tablets

--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -17,6 +17,12 @@
   justify-content: center;
   border: 1px solid black;
 
+  @media only screen and (max-width:1440px) {
+    line-height: 20px;
+    min-width: none;
+    padding: 20px;
+    width: fit-content;
+  }
   &:hover {
     background-color: white;
     color: black;
